--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <div class="header_main">
 
-<h1 class="dark_theme">91 - Essonnes - Véhicules</h1>
+<h1 class="white">91 - Essonnes - Véhicules</h1>
+
 <div class="header_right">
 <a class="favorite" href="#">Favoris</a>
 <a class="submit_ad" href="#">Poster une annonce</a>
@@ -30,7 +31,6 @@
 </div>
 
 </div>
-
 
 <div class="line">
 
