--- a/header.html
+++ b/header.html
@@ -31,10 +31,11 @@
     <a class="category" href="#">Poster une annonce</a>
     </nav>
 
-
 </header>
 
 <div class="tmp_rec"></div>
 
+
+<script src="app.js"></script>
 </body>
 </html>
