--- a/header.html
+++ b/header.html
@@ -28,7 +28,7 @@
     <a class="category" href="#">Loisirs</a>
     <a class="category" href="#">Autres</a>
 
-    <a class="category" href="#">Poster une annonce</a>
+    <a class="submit_ad" href="#">Poster une annonce</a>
     </nav>
 
 </header>
