--- a/header.html
+++ b/header.html
@@ -10,6 +10,11 @@
 
 <header>
 
+    <form>
+        <input type="text" name="q" placeholder="Search...">
+      </form>
+      
+
     <nav>
 
     <select name="departments">
