--- a/header.html
+++ b/header.html
@@ -12,8 +12,7 @@
 
     <form>
         <input type="text" name="q" placeholder="Search...">
-      </form>
-      
+    </form>
 
     <nav>
 
@@ -38,7 +37,7 @@
 
 </header>
 
-<div class="tmp_rec"></div>
+<!-- <div class="tmp_rec"></div> -->
 
 
 <script src="app.js"></script>
