--- a/header.html
+++ b/header.html
@@ -24,7 +24,7 @@
 
 
     <a class="category" href="#">Immobilier</a>
-    <a class="category_active" href="#">Véhicules</a>
+    <a class="category" href="#">Véhicules</a>
     <a class="category" href="#">Vacances</a>
     <a class="category" href="#">Mode</a>
     <a class="category" href="#">Maison</a>
@@ -32,7 +32,7 @@
     <a class="category" href="#">Loisirs</a>
     <a class="category" href="#">Autres</a>
 
-    <a class="submit_ad" href="#">Poster une annonce</a>
+    <a class="category submit_ad" href="#">Poster une annonce</a>
     </nav>
 
 </header>
