--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
 <header>
 
     <form>
-        <input type="text" name="q" placeholder="Search...">
+        <input type="text" name="search" placeholder="Rechercher un produit">
     </form>
 
     <nav>
