--- a/header.html
+++ b/header.html
@@ -21,7 +21,6 @@
     </select>
 
 
-
     <a class="category" href="#">Immobilier</a>
     <a class="category" href="#">Véhicules</a>
     <a class="category" href="#">Vacances</a>
@@ -35,6 +34,16 @@
     </nav>
 
 </header>
+
+<div class="padding"></div>
+
+<div class="card">
+<div class="content">
+
+
+<a href="#">Lire plus</a>
+</div>
+</div>
 
 <div class="tmp_rec"></div>
 
