--- a/header.html
+++ b/header.html
@@ -37,16 +37,79 @@
 
 <div class="padding"></div>
 
-<div class="card">
-<div class="content">
+<section>
 
-<a href="#">Lire plus</a>
+<div class="card">
+    <div class="content">
+        <img src="https://placehold.co/300x225" alt="Photo annonce">
+        <a href="#">Lire plus</a>
+    </div>
 </div>
+
+<div class="card">
+    <div class="content">
+        <img src="https://placehold.co/300x225" alt="Photo annonce">
+        <a href="#">Lire plus</a>
+    </div>
 </div>
+
+<div class="card">
+    <div class="content">
+        <img src="https://placehold.co/300x225" alt="Photo annonce">
+        <a href="#">Lire plus</a>
+    </div>
+</div>
+
+<div class="card">
+    <div class="content">
+        <img src="https://placehold.co/300x225" alt="Photo annonce">
+        <a href="#">Lire plus</a>
+    </div>
+</div>
+
+<div class="card">
+    <div class="content">
+        <img src="https://placehold.co/300x225" alt="Photo annonce">
+        <a href="#">Lire plus</a>
+    </div>
+</div>
+
+<div class="card">
+    <div class="content">
+        <img src="https://placehold.co/300x225" alt="Photo annonce">
+        <a href="#">Lire plus</a>
+    </div>
+</div>
+
+<div class="card">
+    <div class="content">
+        <img src="https://placehold.co/300x225" alt="Photo annonce">
+        <a href="#">Lire plus</a>
+    </div>
+</div>
+
+<div class="card">
+    <div class="content">
+        <img src="https://placehold.co/300x225" alt="Photo annonce">
+        <a href="#">Lire plus</a>
+    </div>
+</div>
+
+<div class="card">
+    <div class="content">
+        <img src="https://placehold.co/300x225" alt="Photo annonce">
+        <a href="#">Lire plus</a>
+    </div>
+</div>
+
+</section>
+
 
 <div class="tmp_rec"></div>
+<ion-icon name="calculator-sharp" class="icon"></ion-icon>
 
 
 <script src="app.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
 </html>
