--- a/header.html
+++ b/header.html
@@ -35,78 +35,25 @@
 
 </header>
 
-<div class="padding"></div>
+
+
+
 
 <section>
+    <div class="padding"></div>
 
-<div class="card">
-    <div class="content">
-        <img src="https://placehold.co/300x225" alt="Photo annonce">
-        <a href="#">Lire plus</a>
+    <div class="card">
+        AAA
     </div>
-</div>
 
-<div class="card">
-    <div class="content">
-        <img src="https://placehold.co/300x225" alt="Photo annonce">
-        <a href="#">Lire plus</a>
-    </div>
-</div>
-
-<div class="card">
-    <div class="content">
-        <img src="https://placehold.co/300x225" alt="Photo annonce">
-        <a href="#">Lire plus</a>
-    </div>
-</div>
-
-<div class="card">
-    <div class="content">
-        <img src="https://placehold.co/300x225" alt="Photo annonce">
-        <a href="#">Lire plus</a>
-    </div>
-</div>
-
-<div class="card">
-    <div class="content">
-        <img src="https://placehold.co/300x225" alt="Photo annonce">
-        <a href="#">Lire plus</a>
-    </div>
-</div>
-
-<div class="card">
-    <div class="content">
-        <img src="https://placehold.co/300x225" alt="Photo annonce">
-        <a href="#">Lire plus</a>
-    </div>
-</div>
-
-<div class="card">
-    <div class="content">
-        <img src="https://placehold.co/300x225" alt="Photo annonce">
-        <a href="#">Lire plus</a>
-    </div>
-</div>
-
-<div class="card">
-    <div class="content">
-        <img src="https://placehold.co/300x225" alt="Photo annonce">
-        <a href="#">Lire plus</a>
-    </div>
-</div>
-
-<div class="card">
-    <div class="content">
-        <img src="https://placehold.co/300x225" alt="Photo annonce">
-        <a href="#">Lire plus</a>
-    </div>
-</div>
+    <!-- <div class="card">
+        <div class="content">
+            <img src="https://placehold.co/300x225" alt="Photo annonce">
+            <a href="#">Lire plus</a>
+        </div>
+    </div> -->
 
 </section>
-
-
-<div class="tmp_rec"></div>
-<ion-icon name="calculator-sharp" class="icon"></ion-icon>
 
 
 <script src="app.js"></script>
