--- a/header.html
+++ b/header.html
@@ -43,7 +43,10 @@
     <div class="padding"></div>
 
     <div class="card">
-        AAA
+        <div class="content">
+        <img src="https://placehold.co/300x225" alt="Photo annonce">
+        <a href="#">Lire plus</a>
+        </div>
     </div>
 
     <!-- <div class="card">
