--- a/header.html
+++ b/header.html
@@ -78,6 +78,111 @@
                 <a href="#">Lire plus</a>
             </div>
         </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <a href="#">Lire plus</a>
+            </div>
+        </div>
         
     </div>
         
