--- a/header.html
+++ b/header.html
@@ -44,12 +44,12 @@
 
     <div class="container">
 
-        <div class="card">
+
+        <a href="#" class="card">
             <div class="content">
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
             </div>
-        </div>
+        </a>
 
         <div class="card">
             <div class="content">
