--- a/header.html
+++ b/header.html
@@ -35,157 +35,30 @@
 
 </header>
 
-
-
-
+<div class="padding"></div>
 
 <section>
-    <div class="padding"></div>
-
-    <div class="container">
-
 
         <a href="#" class="card">
             <div class="content">
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
+                Description
             </div>
         </a>
 
-        <div class="card">
+        <a href="#" class="card">
             <div class="content">
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
+                Description
             </div>
-        </div>
+        </a>
 
-        <div class="card">
+        <a href="#" class="card">
             <div class="content">
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
+                Description
             </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <a href="#">Lire plus</a>
-            </div>
-        </div>
-        
-    </div>
-        
+        </a>
 
 </section>
 
