--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
         <a href="#" class="card">
             <div class="content">
+                Voiture
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
                 Description
             </div>
