--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 <header>
 
-    <form>
+    <!-- <form>
         <input type="text" name="search" placeholder="Rechercher un produit">
-    </form>
+    </form> -->
 
     <nav>
 
@@ -42,7 +42,7 @@
 
         <a href="#" class="card">
             <div class="content">
-                Voiture
+                <div>Voiture</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
                 Description
             </div>
