--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 
         <a href="#" class="card">
             <div class="content">
-                <div>Voiture</div>
+                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
+                <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
+                Description:
             </div>
         </a>
 
