--- a/index.html
+++ b/index.html
@@ -50,86 +50,72 @@
 
         <a href="#" class="card">
             <div class="content">
+                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description:
+                <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
+                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
+                <div>Ville</div>
+            </div>
+        </a>
+  
+
+
+        <a href="#" class="card">
+            <div class="content">
+                <div>Polo</div>
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
+                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
+                <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
+                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
+                <div>Ville</div>
             </div>
         </a>
-
-
-
 
 
 
         <a href="#" class="card">
             <div class="content">
+                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
+                <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
+                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
+                <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
+                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
+                <div>Ville</div>
             </div>
         </a>
-
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
-            </div>
-        </a>
-
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
-            </div>
-        </a>
-
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
-            </div>
-        </a>
-
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                Description
-            </div>
-        </a>
-
+        
 </section>
 
 <footer>Contact</footer>
