--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
 <div class="padding"></div>
 
-
 <section>
 
         <a href="#" class="card">
@@ -117,6 +116,8 @@
         </a>
         
 </section>
+
+<div class="padding"></div>
 
 <footer>Contact</footer>
 
