--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <a href="#" class="card">
             <div class="content">
                 <div>Polo</div>
+                <ion-icon name="person-sharp" class="icon"></ion-icon>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
                 <div>Ville</div>
             </div>
@@ -124,5 +125,8 @@
 
 <script src="app.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
