--- a/zfront/index.html
+++ b/zfront/index.html
@@ -41,77 +41,64 @@
 
         <a href="#" class="card">
             <div class="content">
-                <div>Polo</div>
-                <ion-icon name="person-sharp" class="icon"></ion-icon>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <div>Nom</div>
                 <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
-                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <div>Nom</div>
                 <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
-                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <div>Ville</div>
-            </div>
-        </a>
-  
-
-
-        <a href="#" class="card">
-            <div class="content">
-                <div>Polo</div>
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <div>Nom</div>
                 <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
-                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <div>Nom</div>
                 <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
-                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <div>Ville</div>
-            </div>
-        </a>
-
-
-
-        <a href="#" class="card">
-            <div class="content">
-                <div>Polo</div>
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <div>Nom</div>
                 <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
-                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <div>Nom</div>
                 <div>Ville</div>
             </div>
         </a>
 
         <a href="#" class="card">
             <div class="content">
-                <div>Polo</div>
                 <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <div>Nom</div>
+                <div>Ville</div>
+            </div>
+        </a>
+
+        <a href="#" class="card">
+            <div class="content">
+                <img src="https://placehold.co/300x225" alt="Photo annonce">
+                <div>Nom</div>
                 <div>Ville</div>
             </div>
         </a>
