--- a/zfront/index.html
+++ b/zfront/index.html
@@ -1,3 +1,5 @@
+<!-- https://youtu.be/sx0QXhcgplU -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,61 +49,10 @@
             </div>
         </a>
 
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <div>Nom</div>
-                <div>Ville</div>
-            </div>
-        </a>
+        <div class="card2">
 
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <div>Nom</div>
-                <div>Ville</div>
-            </div>
-        </a>
-
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <div>Nom</div>
-                <div>Ville</div>
-            </div>
-        </a>
-
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <div>Nom</div>
-                <div>Ville</div>
-            </div>
-        </a>
-
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <div>Nom</div>
-                <div>Ville</div>
-            </div>
-        </a>
-
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <div>Nom</div>
-                <div>Ville</div>
-            </div>
-        </a>
-
-        <a href="#" class="card">
-            <div class="content">
-                <img src="https://placehold.co/300x225" alt="Photo annonce">
-                <div>Nom</div>
-                <div>Ville</div>
-            </div>
-        </a>
+            
+        </div>
         
 </section>
 
